force-app/main/default/objects/Match__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Player</label>
    <type>AutoNumber</type>
</CustomField>