force-app/main/default/objects/Match__c/fields/Team_1_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_1_Count__c</fullName>
    <label>Team 1 Count</label>
    <summaryForeignKey>Team1__c.Match__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>