force-app/main/default/objects/Match__c/fields/Team_2_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_2_Count__c</fullName>
    <label>Team 2 Count</label>
    <summaryForeignKey>Team2__c.Match__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>