force-app/main/default/objects/Match__c/fields/Type_of_Player__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Player__c</fullName>
    <label>Type of Player</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batsman</fullName>
            </value>
            <value>
                <fullName>Bowler</fullName>
            </value>
            <value>
                <fullName>All Rounder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>